--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,42 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+* {
+  box-sizing: border-box;
+}
+h1 {
+  margin-left: 1%;
+}
+
+p {
+  margin: 0;
+  margin-top: 2px;
+}
+
+p:first-child {
+  margin: 0;
+  font-weight: bolder;
+}
+.searchTermCont {
+  width: 100%;
+  margin-left: 1%;
+  margin-bottom: 1%;
+}
+.foodTilesCont {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.foodTile {
+  width: 18.8%;
+  margin-right: 1%;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 1%;
+}
+
+.foodTile:nth-child(5n + 1) {
+  margin-left: 1%;
+}
