--- a/src/index.css
+++ b/src/index.css
@@ -27,14 +27,48 @@ p:first-child {
   margin: 0;
   font-weight: bolder;
 }
+
 .searchTermCont {
   width: 100%;
   margin-left: 1%;
   margin-bottom: 1%;
 }
 
+nav {
+  margin-right: 1%;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+}
+
+nav ul li {
+  padding: 0;
+  margin: 0;
+  margin-left: 1rem;
+}
+
+.rootHeader {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.siteHeader {
+  display: inline;
+}
+
 .searchButton {
   margin: 0 3px;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 2px;
+}
+.searchButton a {
+  color: black;
+  text-decoration: none;
 }
 
 .foodTilesCont {
@@ -59,6 +93,9 @@ p:first-child {
   justify-content: center;
 }
 
+.resultStats {
+  margin-left: 1%;
+}
 .thisPage {
   background-color: black;
   color: white;
@@ -86,16 +123,47 @@ p:first-child {
 
 .nutrientCont {
   /* border: solid 1px black; */
+  /* border-collapse: collapse; */
+  border-spacing: 0;
+}
+
+.nutrientCont td {
+  /* border: solid 1px black; */
+  padding-bottom: 2px;
 }
 
 .tableLabel {
   text-align: right;
   font-weight: bold;
   vertical-align: top;
+  white-space: nowrap;
 }
 
-.tableValue {
+.tableValueMs {
   vertical-align: bottom;
+  text-align: right;
+  padding-left: 4px;
+  padding-right: 0;
+  /* margin-right: 0; */
+}
+
+.tableValueLs {
+  padding-left: 0;
+  /* margin-left: 0; */
+}
+
+.tableDecimalPoint {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.tableValueUnit {
+  width: 100%;
+}
+
+.foodTitleCont {
+  text-align: left;
+  padding-bottom: 4px;
 }
 
 .foodTitle {
