--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,14 @@ nav ul li {
   text-align: center;
 }
 
+.loginLabel {
+  text-align: right;
+}
+
+.errorMsg {
+  color: red;
+}
+
 @media (min-width: 400px) and (max-width: 799px) {
   .foodTile {
     width: 48.5%;
