Implemented favorite un/tagging on search result page Fixed search error that would not re-search in some cases Recolored favorite icons from red/black to black/grey

--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,26 @@ nav ul li {
   color: red;
 }
 
+.black {
+  color: black;
+}
+
+.red {
+  color: red;
+}
+
+.lightgray {
+  color: lightgray;
+}
+
+.favoriteButton {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
 @media (min-width: 400px) and (max-width: 799px) {
   .foodTile {
     width: 48.5%;
