Created utils module to enable reuse of functions Added ingredients to FoodDetail

--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,14 @@ nav ul li {
   color: lightgray;
 }
 
+.tileDetailTitle {
+  width: 100%;
+}
+
+.tileDetailFavorite {
+  vertical-align: top;
+}
+
 .favoriteButton {
   background-color: transparent;
   outline: none;
