--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ body {
 * {
   box-sizing: border-box;
 }
+
+.mainContainer {
+  margin-left: 1%;
+}
+
 h1 {
   margin-left: 1%;
 }
@@ -48,6 +53,10 @@ nav ul li {
   padding: 0;
   margin: 0;
   margin-left: 1rem;
+}
+
+nav ul li a {
+  white-space: nowrap;
 }
 
 .rootHeader {
