--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
 }
 
 .mainContainer {
+  width: 80%;
   margin-left: 1%;
   position: absolute;
   top: 55%;
@@ -33,6 +34,8 @@ body {
 
 .subTitle {
   font-size: 1rem;
+  text-align: center;
+  margin-top: 10px;
 }
 
 h1 {
@@ -71,6 +74,8 @@ nav {
 nav ul {
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: right;
   padding: 0;
 }
 
@@ -78,6 +83,14 @@ nav ul li {
   padding: 0;
   margin: 0;
   margin-left: 1rem;
+  margin-top: 5px;
+}
+
+nav ul li.userMeeting {
+  /* align-self: flex-end; */
+  width: 100%;
+  text-align: right;
+  margin-top: 5px;
 }
 
 nav ul li a {
@@ -98,6 +111,14 @@ nav ul li a:hover {
 
 .siteHeader {
   display: inline;
+}
+
+.together {
+  white-space: nowrap;
+}
+
+.previewTilesCont a {
+  text-decoration: none;
 }
 
 .searchButton {
@@ -335,6 +356,7 @@ button.unfavorited {
 
 .bigMessage {
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .messageFont {
@@ -351,6 +373,11 @@ button.unfavorited {
 
   .foodTile:nth-child(2n + 1) {
     margin-left: 1%;
+  }
+
+  .mainContainer,
+  .mainMsgContainer {
+    width: 90%;
   }
 }
 
@@ -377,5 +404,10 @@ button.unfavorited {
 
   .foodTile:nth-child(5n + 1) {
     margin-left: 1%;
+  }
+
+  .mainContainer,
+  .mainMsgContainer {
+    width: 50%;
   }
 }
